examples/err-doubledecl2.uc
f(x) {
  var x, z; // error: identifier already declared

  return 0;
}